<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.learningnavigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.learningnavigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/bbc_news"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.learningnavigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/al_jazira"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxNewsFragment"
        android:name="com.example.learningnavigationdrawer.FoxNewsFragment"
        android:label="@string/foxtitle"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/skyNewsFragment"
        android:name="com.example.learningnavigationdrawer.SkyNewsFragment"
        android:label="@string/Skytitle"
        tools:layout="@layout/fragment_sky_news" />
</navigation>